# skdwork-aiot

./: AGENTS.md  Cargo.toml  README.md  sdkwork.app.config.json
crates/sdkwork-aiot-adapter-xiaozhi/: Cargo.toml
crates/sdkwork-aiot-adapter-xiaozhi/specs/: README.md  component.spec.json
crates/sdkwork-aiot-adapter-xiaozhi/src/: lib.rs
crates/sdkwork-aiot-adapter-xiaozhi/tests/: xiaozhi_standard.rs
crates/sdkwork-aiot-architecture/specs/: README.md  component.spec.json
crates/sdkwork-aiot-architecture/tests/: architecture_standard.rs
crates/sdkwork-aiot-contract/specs/: README.md  component.spec.json
crates/sdkwork-aiot-contract/src/: lib.rs
crates/sdkwork-aiot-core/specs/: README.md  component.spec.json
crates/sdkwork-aiot-core/src/: lib.rs
crates/sdkwork-aiot-core/tests/: core_standard.rs
crates/sdkwork-aiot-http-api/: Cargo.toml
crates/sdkwork-aiot-http-api/specs/: README.md  component.spec.json
crates/sdkwork-aiot-http-api/src/: lib.rs
crates/sdkwork-aiot-http-api/tests/: http_api_standard.rs
crates/sdkwork-aiot-observability/specs/: README.md  component.spec.json
crates/sdkwork-aiot-protocol/specs/: README.md  component.spec.json
crates/sdkwork-aiot-protocol/src/: lib.rs
crates/sdkwork-aiot-protocol/tests/: protocol_standard.rs
crates/sdkwork-aiot-runtime/: Cargo.toml
crates/sdkwork-aiot-runtime/specs/: README.md  component.spec.json
crates/sdkwork-aiot-runtime/src/: lib.rs
crates/sdkwork-aiot-runtime/tests/: runtime_standard.rs
crates/sdkwork-aiot-security/specs/: README.md  component.spec.json
crates/sdkwork-aiot-storage-sqlx/: Cargo.toml
crates/sdkwork-aiot-storage-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-aiot-storage-sqlx/src/: lib.rs
crates/sdkwork-aiot-storage-sqlx/tests/: storage_sqlx_standard.rs
crates/sdkwork-aiot-storage/specs/: README.md  component.spec.json
crates/sdkwork-aiot-storage/src/: lib.rs
crates/sdkwork-aiot-storage/tests/: storage_standard.rs
crates/sdkwork-aiot-transport/specs/: README.md  component.spec.json
crates/sdkwork-aiot-transport/src/: lib.rs
crates/sdkwork-aiot-transport/tests/: transport_standard.rs
docs/: external-reference-selection.md  xiaozhi-protocol-parity-matrix.md
docs/superpowers/specs/: 2026-05-31-sdkwork-aiot-server-design.md
sdks/sdkwork-aiot-app-sdk/: .sdkwork-assembly.json
sdks/sdkwork-aiot-app-sdk/openapi/: sdkwork-aiot-app-sdk.openapi.json  sdkwork-aiot-app-sdk.sdkgen.json
sdks/sdkwork-aiot-app-sdk/sdkwork-aiot-app-sdk-typescript/: package.json  sdkwork-sdk.json  tsconfig.json
sdks/sdkwork-aiot-app-sdk/specs/: README.md  component.spec.json
sdks/sdkwork-aiot-backend-sdk/openapi/: sdkwork-aiot-backend-sdk.openapi.json
services/sdkwork-aiot-admin-api/: Cargo.toml
services/sdkwork-aiot-admin-api/specs/: README.md  component.spec.json
services/sdkwork-aiot-admin-api/src/: main.rs
services/sdkwork-aiot-app-api/: Cargo.toml
services/sdkwork-aiot-app-api/specs/: README.md  component.spec.json
services/sdkwork-aiot-app-api/src/: main.rs
services/sdkwork-aiot-gateway/: Cargo.toml
services/sdkwork-aiot-gateway/specs/: README.md  component.spec.json
services/sdkwork-aiot-gateway/src/: lib.rs  main.rs
services/sdkwork-aiot-gateway/tests/: gateway_standard.rs
services/sdkwork-aiot-xiaozhi-simulator-ui/: Cargo.toml
specs/: component.spec.json
(+9 files in other folders)
