[package]
name = "sdkwork-aiot-runtime"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sdkwork-aiot-contract = { path = "../sdkwork-aiot-contract" }
sdkwork-aiot-core = { path = "../sdkwork-aiot-core" }
sdkwork-aiot-protocol = { path = "../sdkwork-aiot-protocol" }
sdkwork-aiot-security = { path = "../sdkwork-aiot-security" }
sdkwork-aiot-storage = { path = "../sdkwork-aiot-storage" }
sha2 = "0.10"
