[package]
name = "sdkwork-aiot-app-api"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sdkwork-aiot-http-api = { path = "../../crates/sdkwork-aiot-http-api" }
sdkwork-aiot-runtime = { path = "../../crates/sdkwork-aiot-runtime" }
sdkwork-aiot-storage = { path = "../../crates/sdkwork-aiot-storage" }
sdkwork-aiot-storage-sqlx = { path = "../../crates/sdkwork-aiot-storage-sqlx" }
